--- a/package.json
+++ b/package.json
@@ -27,19 +27,19 @@
     "monero-javascript": "^0.2.14"
   },
   "devDependencies": {
+    "acorn": "^6.4.1",
     "babel-core": "6.26.3",
     "babel-loader": "8.0.2",
     "babel-minify": "0.4.3",
+    "chai": "^4.2.0",
     "electron": "3.0.3",
     "eslint": "5.6.0",
-    "memfs": "^3.0.4",
-    "webpack": "^4.41.3",
-    "webpack-cli": "3.1.0",
-    "webpack-merge": "4.1.4",
-    "worker-loader": "2.0.0",
-    "chai": "^4.2.0",
-    "mocha": "^7.0.1",
+    "memfs": "^3.1.2",
     "minimist": "^1.2.2",
-    "acorn": "^6.4.1"
+    "mocha": "^7.1.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-merge": "4.1.4",
+    "worker-loader": "2.0.0"
   }
 }
